dandb: Fixed alignment of lines

--- a/css/tree.css
+++ b/css/tree.css
@@ -4,6 +4,7 @@ h1 {
 	text-align: center;
 	font-stretch: expanded;
 	font-size:3vw;
+	font-family: "Ubuntu", sans-serif;
 }
 
 .tree {
@@ -20,15 +21,16 @@ h1 {
 
 .tree li {
 	border-left: 1px solid black;
+	padding-left: 15px
 }
 .tree li:before {
 	border-bottom: 2px solid black;
 	position: relative;
-	top: -0.8em;
+	top: 1.4em;
 	width: 12px;
 	content: "";
 	display: inline-block;
-	left: -1px;
+	left: -15px;
 }
 
 .leaf {
@@ -49,13 +51,14 @@ h1 {
 	display:none;
 	position: absolute;
 	background-color: #f9f9f9;
-	width: 400px;
-	padding: 8px 16px 8px 16px;
+	width: 350px;
+	padding: 8px 8px 8px 8px;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	text-align: left;
 	font-weight: normal;
 	line-height: 150%;
 	z-index: 1;
+	border: 1px solid black;
 }
 
 .icon {
